--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p><i>Just another cat simp</i></p>
             <nav>
                 <ul>
-                    <li><a href="https://meowx-2.github.io/home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="https://meowx-2.github.io/home/blog.html">Blog</a></li>
                     <li><a href="https://meowx-2.github.io/home/resources.html">Resources</a></li>
                 </ul>
