--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
                 <h3>So HSC is over :thinking:</h3>
                 <p>Oct 5 2023</p>
                 <p>
-            This is gonna be a short post, I'll just recap my 11th 12th grade. <a href=https://meowx-2.github.io/home/files/hsc.html> See more...</a>
+            This is gonna be a short post, I'll just recap my 11th 12th grade. <a href=files/hsc.html> See more...</a>
                 </p>
             </div>
  
@@ -40,7 +40,7 @@
             <h3>Reflection</h3>
                 <p>May 16 2023</p>
                 <p>
-                    I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <a href="https://meowx-2.github.io/home/files/reflection.html">See more...</a>
+                    I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <a href="files/reflection.html">See more...</a>
                                 </div>
 
             <!-- Add more blog posts as needed -->
