--- a/files/reflection.html
+++ b/files/reflection.html
@@ -16,9 +16,9 @@
         <div class="container">
           <nav>
                 <ul>
-                    <li><a href="https://meowx-2.github.io/home">Home</a></li>
-                    <li><a href="https://meowx-2.github.io/home/blog.html">Blog</a></li>
-                    <li><a href="https://meowx-2.github.io/home/resources.html">Resources </a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="resources.html">Resources </a></li>
                 </ul>
             </nav>
         </div>
