--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+      <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
+      <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arifa Alam </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +33,7 @@
             <h2>About Me</h2>
             <p>
                 <p>Hello, I'm Arifa. I am a high school student in Bangladesh. I am mainly interested in mathematics and computer science. Besides, I like doodling!  </p>
-                <p>I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. My works are in the portfolio section. 
+                <p>I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. 
                 </p>
                 <p>Later, I became a trainer. I've blogged about a seemingly wide range of subjects in the blog section, and here are some additional resources in the resources section.</p> 
 
@@ -39,11 +42,11 @@
     </section>
 
 
-    <!-- <footer>
+     <footer>
         <div class="container">
             &copy; 2023 Arifa Alam
         </div>
-</footer> -->
+</footer> 
 
 </body>
 </html>
