--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arifa Alam </title>
+    <!-- font --------------------------------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap" rel="stylesheet">
+    <!-- font ---------------------------------------------->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +19,7 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <p><i>Just another cat simp</i></p>
+            <p><i>    Just another cat simp</i></p>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
