--- a/files/hsc.html
+++ b/files/hsc.html
@@ -3,6 +3,8 @@
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
+      <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
+      <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HSC </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
