--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,7 @@
                     <li>Eucidean Geometry of Mathematical Olympiad </li>
                     <li>Geometry revisited</li>
                     <li>Notes of Yufei Zhao </li>
-            <li><a href="https://meowx-2.github.io/home/uploads/iranlemma.pdf" target ="_blank">Iran lemma: </a> a note that I wrote. </li>
+            <li><a href="uploads/iranlemma.pdf" target ="_blank">Iran lemma: </a> a note that I wrote. </li>
                 </p>
             </div>
 
