--- a/files/hsc.html
+++ b/files/hsc.html
@@ -18,9 +18,9 @@
         <div class="container">
           <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="resources.html">Resources </a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../blog.html">Blog</a></li>
+                    <li><a href="../resources.html">Resources </a></li>
                 </ul>
             </nav>
         </div>
