massive scheme cng

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
         <div class="container">
             <h2>Blog</h2>
      <div class="blog-post">
-                <h3>So HSC is over :thinking:</h3>
+          <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
                 <p>Oct 5 2023</p>
                 <p>
             This is gonna be a short post, I'll just recap my 11th 12th grade. <a href=files/hsc.html> See more...</a>
@@ -39,7 +39,7 @@
  
 
             <div class="blog-post">
-            <h3>Reflection</h3>
+          <h3><a href="files/reflection.html">Reflection</a></h3>
                 <p>May 16 2023</p>
                 <p>
                     I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <a href="files/reflection.html">See more...</a>
