--- a/files/hsc.html
+++ b/files/hsc.html
@@ -3,14 +3,11 @@
 <html lang="bn">
 <head>
     <meta charset="UTF-8">
-      <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
+      <link rel="shortcut icon" type="x-icon" href= "../uploads/icon.png" >
       <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HSC </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
