--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <p><i>    Just another cat simp</i></p>
+            <p><i>    Just another cat simp</i>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="resources.html">Resources</a></li>
+            <li><a href="resources.html"> Resources</a></li>
                 </ul>
             </nav>
+        </p>
         </div>
     </header>
 
