--- a/resources.html
+++ b/resources.html
@@ -6,9 +6,6 @@
       <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
    
 </head>
@@ -32,10 +29,12 @@
 <div class="blog-post">
                 <h3>General</h3>
                 <p>
+            <ul type="disc">
                     <li>Art and Craft Of Problem Solving </li>
                     <li>নিউরনে অনুরণন</li>
             <li><a href="https://artofproblemsolving.com/community/" target ="_blank">aops</a> </li>
             <li><a href="https://gonitzoggo.com/archive/problems/math" target ="_blank">Gonitzoggo</a> for problem solving. </li>
+            </ul>
                 </p>
             </div>
 
