--- a/files/reflection.html
+++ b/files/reflection.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h2>Reflection</h2>
                 <p><small><i>16 May 2023</i></small></p>
-            <div class="blog-post">
+            <div class="blog-post-ex">
                 <p>
                     I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <br>
                     <p><b>2017</b></p>
