--- a/files/hsc.html
+++ b/files/hsc.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h2>So HSC is over :thinking:</h2>
                 <p><small><i>5 October 2023</i></small></p>
-            <div class="blog-post">
+            <div class="blog-post-ex">
             <p> This is gonna be a short post, I'll just recap my 11th 12th grade.</p>
             <p>I think the academics are atrocious in the school. And I avoided that. I just survived in the exams and just barely could keep me in shape. I hated their unnecessary rules. And, almost all of my school exams held during my camps. And got rekt from both :')</p>
             <p>With all of these, I still think they are the nicest part of my life. Because,
