--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,7 @@
 
             <div class="blog-post" data-tags="personal">
           <h3><a href="files/reflection.html">Reflection</a></h3>
+            <div class="blog-type">Personal</div>
                 <p>
                     I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <a href="files/reflection.html">Continue Reading...</a>
                 <p class="date">May 16 2023</p>
