--- a/blog.html
+++ b/blog.html
@@ -39,14 +39,14 @@
    </header>
   <div class="container">
 
+    <section id="blog" class="section-blog">
+        <div class="container">
             <h2>Blog</h2>
             <div class="tags">
 
                     <a href="#" class="tag" data-tag="personal">Personal</a>
                 <a href="#" class="tag" data-tag="math">Math</a>
             </div>
-    <section id="blog" class="section-blog">
-        <div class="container">
 
      <div class="blog-post" data-tags="personal">
           <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
@@ -63,7 +63,7 @@
           <h3><a href="files/reflection.html">Reflection</a></h3>
             <div class="blog-type">Personal</div>
                 <p>
-                    I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. I never thought I would be interviewed in big TV channels or newspapers. But it changed my life for the better. And I'm writing it out of gratitude. <a href="files/reflection.html">Continue Reading...</a>
+                    I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. <a href="files/reflection.html">Continue Reading...</a>
                 <p class="date">May 16 2023</p>
                                 </div>
 
