spacing around blog section is fixed

--- a/resources.html
+++ b/resources.html
@@ -75,7 +75,7 @@
             <div class="blog-post-ex">
                 <h3>Algebra</h3>
           
-          A good way to do better is just solving shortlist problems AND reading solutions in a forum like <a href = "https://artofproblemsolving.com/community">aops</a>
+          A good way to do better is just solving shortlist problems AND reading solutions in a forum like <a href = "https://artofproblemsolving.com/community">AOPS</a>
 
                 
             </div>
