--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
       <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
       <meta http-equiv="X-UA-compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <p><i>    Just another cat simp</i>
+            <p><i>Just another cat simp</i>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,10 +35,19 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                <p>Hello, I'm Arifa. I am a high school student in Bangladesh. I am mainly interested in mathematics and computer science. Besides, I like doodling!  </p>
-                <p>I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. 
-                </p>
-                <p>Later, I became a trainer. I've blogged about a seemingly wide range of subjects in the blog section, and here are some additional resources in the resources section.</p> 
+       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Computer Science. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly).</p>
+        
+       <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. </p>
+
+       <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the resources section. However, it's important to note that they're just suggestions. Feel free to explore on your own! </p> 
+        <br>
+        Contact/Social:  
+        <a href="mailto:alamarifa9@gmail.com" target="_blank" ><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style= "color:#000000"></i></a>
+          <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin" style= "color:#0077B5"></i></a>
+        <a href="" target="_blank"><i class="fa-brands fa-discord" style="color:#7289DA"></i> </a>
+        </p>
+
 
             </p>
         </div>
