--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Computer Science. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly).</p>
+       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Coding. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly)</p>
         
-       <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. </p>
+       <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
 
        <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the resources section. However, it's important to note that they're just suggestions. Feel free to explore on your own! </p> 
         <br>
@@ -45,7 +45,6 @@
         <a href="mailto:alamarifa9@gmail.com" target="_blank" ><i class="fa-solid fa-envelope"></i></a>
         <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style= "color:#000000"></i></a>
           <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin" style= "color:#0077B5"></i></a>
-        <a href="" target="_blank"><i class="fa-brands fa-discord" style="color:#7289DA"></i> </a>
         </p>
 
 
