--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="mailto:alamarifa9@gmail.com" target="_blank" ><i class="fa-solid fa-envelope"></i></a>
         <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style= "color:#000000"></i></a>
           <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin" style= "color:#0077B5"></i></a>
-        </p>
+        <a href="uploads/CV/cv.pdf"><i class="fa-solid fa-file"></i></a>        </p>
 
 
             </p>
