--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <p><i> </i>
+            <i> Here is my  <a href="uploads/CV/cv.pdf">CV</a>. </i>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -37,7 +37,7 @@
        <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Coding. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly)</p>
         
       
-        <p> Here is my  <a href="uploads/CV/cv.pdf">CV</a>. Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
+        <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
 
        <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the resources section. However, it's important to note that they're just suggestions. Feel free to explore on your own! </p> 
         <br>
