CV added in beneath the name lol

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <i> Here is my  <a href="uploads/CV/cv.pdf">CV</a>. </i>
+            <i> <a href="uploads/CV/cv.pdf">CV</a>. </i>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
