--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <h1>Arifa Alam</h1>
-            <i> <a href="uploads/CV/cv.pdf">CV</a>. </i>
+            <i> </i>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -34,7 +34,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Coding. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly)</p>
+       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Coding. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly). And  <a href="uploads/CV/cv.pdf">here</a> is my CV. </p>
         
       
         <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
