spacing fix in the code

--- a/index.html
+++ b/index.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-      <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
-      <meta http-equiv="X-UA-compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arifa Alam </title>
-    <!-- font --------------------------------------------->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+  <link rel="shortcut icon" type="x-icon" href="uploads/icon.png">
+  <meta http-equiv="X-UA-compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Arifa Alam </title>
+  <!-- font --------------------------------------------->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <header>
-        <div class="container">
-            <h1>Arifa Alam</h1>
-            <i> </i>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-            <li><a href="resources.html"> Resources</a></li>
-                </ul>
-            </nav>
-        </p>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <h1>Arifa Alam</h1>
+      <i> </i>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="resources.html"> Resources</a></li>
+        </ul>
+      </nav>
+      </p>
+    </div>
+  </header>
 
-    <section id="about" class="section-about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>
-       <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry and Combinatorics) and Coding. Besides, I like doing bad <a href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly). And  <a href="uploads/CV/cv.pdf">here</a> is my CV. </p>
-        
-      
-        <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
-
-       <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the resources section. However, it's important to note that they're just suggestions. Feel free to explore on your own! </p> 
-        <br>
-        Contact/Social:  
-        <a href="mailto:alamarifa9@gmail.com" target="_blank" ><i class="fa-solid fa-envelope"></i></a>
-        <a href="uploads/CV/cv.pdf"><i class="fa-solid fa-file"></i></a>        
-        <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style= "color:#000000"></i></a>
-          <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin" style= "color:#0077B5"></i></a>
-</p>
+  <section id="about" class="section-about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+      <p>Hello, I'm Arifa. I am a high school graduate in Bangladesh. I am mainly interested in Mathematics (Geometry
+        and Combinatorics) and Coding. Besides, I like doing bad <a
+          href="https://www.deviantart.com/kikorbenjene">digital art</a>. I am also on <a
+          href="https://www.duolingo.com/profile/are.if.a" target="_blank">Duolingo</a>!(Learning Japanese, mostly). And
+        <a href="uploads/CV/cv.pdf">here</a> is my CV. </p>
 
 
-            </p>
-        </div>
-    </section>
+      <p>Besides, I have been a contestant in the Bangladesh Mathematical Olympiad(BDMO) since 2018. I have also won a
+        bronze medal in EGMO 2023. Besides doing math, I like sewing. On the other hand, I hate cooking.</p>
+
+      <p>Later, I became a trainer. I'm blogging in the blog section, and there are some additional resources in the
+        resources section. However, it's important to note that they're just suggestions. Feel free to explore on your
+        own! </p>
+      <br>
+      Contact/Social:
+      <a href="mailto:alamarifa9@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+      <a href="uploads/CV/cv.pdf"><i class="fa-solid fa-file"></i></a>
+      <a href="https://github.com/meowx-2" target="_blank"><i class="fa-brands fa-github" style="color:#000000"></i></a>
+      <a href="https://linkedin.com/in/meowx" target="_blank"><i class="fa-brands fa-linkedin"
+          style="color:#0077B5"></i></a>
+      </p>
+
+
+      </p>
+    </div>
+  </section>
 
 
 </body>
+
 </html>
