smooth scroll and new[unfinshed]blog [do not push]

--- a/files/hsc.html
+++ b/files/hsc.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <html lang="bn">
+
 <head>
-    <meta charset="UTF-8">
-      <link rel="shortcut icon" type="x-icon" href= "../uploads/icon.png" >
-      <meta http-equiv="X-UA-compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HSC </title>
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="x-icon" href="../uploads/icon.png">
+  <meta http-equiv="X-UA-compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HSC </title>
+  <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
 
-    <header>
-        <div class="container">
-          <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../blog.html">Blog</a></li>
-                    <li><a href="../resources.html">Resources </a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header>
+    <div class="container">
+      <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../blog.html">Blog</a></li>
+          <li><a href="../resources.html">Resources </a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="blog" class="section-blog">
-        <div class="container">
-            <h2>So HSC is over :thinking:</h2>
-                <p><small><i>5 October 2023</i></small></p>
-            <div class="blog-post-ex">
-            <p> This is gonna be a short post, I'll just recap my 11th 12th grade.</p>
-            <p>I think the academics are atrocious in the school. And I avoided that. I just survived in the exams and just barely could keep me in shape. I hated their unnecessary rules. And, almost all of my school exams held during my camps. And got rekt from both :')</p>
-            <p>With all of these, I still think they are the nicest part of my life. Because,
-            <ol type = '1'>
-              <li>People were nicer to me</li>
-              <li><i>Autocracy</i> not in a bad way btw. </li>
-              <li> I made many <s>inside jokes</s> memories.
-            </ol></p>
-            <p> 
-              The last part of these were stressfull and not upto my level of patience, yet I was able to make it.
+  <section id="blog" class="section-blog">
+    <div class="container">
+      <h2>So HSC is over :thinking:</h2>
+      <p><small><i>5 October 2023</i></small></p>
+      <div class="blog-post-ex">
+        <p> This is gonna be a short post, I'll just recap my 11th 12th grade.</p>
+        <p>I think the academics are atrocious in the school. And I avoided that. I just survived in the exams and just
+          barely could keep me in shape. I hated their unnecessary rules. And, almost all of my school exams held during
+          my camps. And got rekt from both :')</p>
+        <p>With all of these, I still think they are the nicest part of my life. Because,
+        <ol type='1'>
+          <li>People were nicer to me</li>
+          <li><i>Autocracy</i> not in a bad way btw. </li>
+          <li> I made many <s>inside jokes</s> memories.
+        </ol>
+        </p>
+        <p>
+          The last part of these were stressfull and not upto my level of patience, yet I was able to make it.
 
-             </div>
-        </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
 
 </body>
-</html>
 
+</html>
