--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <html lang="bn">
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="uploads/icon.png">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blogs</title>
   <link rel="stylesheet" href="style.css">
-
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
   <section id="about" class="section-blog">
     <div class="container">
       <h2>Math Olympiad(Mostly)</h2>
-      <div class="blog-post-ex">
+      <div class="resource-post-ex">
         <h3>General</h3>
         <p>
         <ul type="disc">
@@ -42,7 +42,7 @@
       </div>
 
 
-      <div class="blog-post-ex">
+      <div class="resource-post-ex">
         <h3>Geometry</h3>
         <p>
         <ul type="disc">
@@ -55,7 +55,7 @@
         </p>
       </div>
 
-      <div class="blog-post-ex">
+      <div class="resource-post-ex">
         <h3>Number theory</h3>
         <p>
           There are plenty, but I would recommend
@@ -65,7 +65,7 @@
         </ul>
         </p>
       </div>
-      <div class="blog-post-ex">
+      <div class="resource-post-ex">
         <h3>Combinatorics</h3>
         <ul type="disc">
           <li>Olympiad Combinatorics</li>
@@ -75,7 +75,7 @@
       </div>
 
 
-      <div class="blog-post-ex">
+      <div class="resource-post-ex">
         <h3>Algebra</h3>
 
         A good way to do better is just solving shortlist problems AND reading solutions in a forum like <a
