--- a/blog.html
+++ b/blog.html
@@ -1,77 +1,85 @@
 <!DOCTYPE html>
-<html lang="en", "bn">
+<html lang="en" , "bn">
+
 <head>
-    <meta charset="UTF-8">
-      <link rel="shortcut icon" type="x-icon" href= "uploads/icon.png" >
-      <meta http-equiv="X-UA-compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs - Arifa Alam</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" type="x-icon" href="../uploads/icon.png">
+  <meta http-equiv="X-UA-compatible" content="IE-edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blogs - Arifa Alam</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
+
 <body>
 
-    <header>
-        <div class="container">
-          <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="resources.html">Resources </a></li>
-                </ul>
-            </nav>
-        </div>
-         <script>
-                function toggleMenu() {
-                    const menuIcon = document.querySelector('.menu-icon');
-                    menuIcon.classList.toggle('active');
-                    var element = document.getElementById('Menu');
-                    var currentHeight = parseInt(element.style.height);
-                    if (currentHeight === 40) {
-                         element.style.height = '115px';
-                    } else if (currentHeight === 115) { 
-                        element.style.height = '40px'
-                    }
-                }
-            </script>
-   </header>
+  <header>
+    <div class="container">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="resources.html">Resources </a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <div class="container">
 
     <section id="blog" class="section-blog">
-        <div class="container">
-            <h2>Blog</h2>
-            <div class="tags">
+      <div class="container">
+        <h2>Blog</h2>
+        <div class="tags">
 
-                    <a href="#" class="tag" data-tag="personal">Personal</a>
-                <a href="#" class="tag" data-tag="math">Math</a>
-            </div>
-
-     <div class="blog-post" data-tags="personal">
-          <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
-            <div class="blog-type">Personal</div>
-                <p>
-            This is gonna be a short post, I'll just recap my 11th 12th grade. <a href="files/hsc.html"> Continue Reading...</a>
-                </p>
-
-                <p class="date">Oct 5 2023</p>
-            </div>
- 
-
-            <div class="blog-post" data-tags="personal">
-          <h3><a href="files/reflection.html">Reflection</a></h3>
-            <div class="blog-type">Personal</div>
-                <p>
-                    I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups and downs. <a href="files/reflection.html">Continue Reading...</a>
-                <p class="date">May 16 2023</p>
-                                </div>
-
-            <!-- Add more blog posts as needed -->
-
+          <a href="#" class="tag" data-tag="code">Code</a>
+          <a href="#" class="tag" data-tag="math">Math</a>
+          <a href="#" class="tag" data-tag="personal">Personal</a>
         </div>
+
+        <div class="blog-post" data-tags="code">
+          <h3><a href="files/reflection.html">NeoVim & Random Coding Setups With It</a></h3>
+          <div class="blog-type">Code</div>
+          <p>
+            So,those who knows me closely knows I stan for
+            <code>NeoVim</code>.
+            and downs.
+            <a href="files/nvim.html">Continue Reading...</a>
+          <p class="date">May 16 2023</p>
+        </div>
+
+
+        <div class="blog-post" data-tags="personal">
+          <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
+          <div class="blog-type">Personal</div>
+          <p>
+            This is gonna be a short post, I'll just recap my 11th 12th grade. <a href="files/hsc.html"> Continue
+              Reading...</a>
+          </p>
+
+          <p class="date">Oct 5 2023</p>
+        </div>
+
+
+        <div class="blog-post" data-tags="personal">
+          <h3><a href="files/reflection.html">Reflection</a></h3>
+          <div class="blog-type">Personal</div>
+          <p>
+            I am to write about the most significant period of my life; my Math Olympiad Journey has had a lot of ups
+            and downs. <a href="files/reflection.html">Continue Reading...</a>
+          <p class="date">May 16 2023</p>
+        </div>
+
+        <!-- Add more blog posts as needed -->
+
+      </div>
     </section>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
