--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:wght@100;700&family=Montserrat:ital,wght@0,300;1,100&family=Quicksand&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
