--- a/resources.html
+++ b/resources.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="x-icon" href="uploads/icon.png">
   <meta http-equiv="X-UA-compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blogs</title>
+  <title>Resources</title>
   <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
