neovim new blog and groupt

--- a/blog.html
+++ b/blog.html
@@ -42,14 +42,14 @@
         </div>
 
         <div class="blog-post" data-tags="code">
-          <h3><a href="files/reflection.html">NeoVim & Random Coding Setups With It</a></h3>
+          <h3><a href="files/nvim.html">NeoVim & Random Coding Setups With It</a></h3>
           <div class="blog-type">Code</div>
           <p>
             So,those who knows me closely knows I stan for
             <code>NeoVim</code>.
             and downs.
             <a href="files/nvim.html">Continue Reading...</a>
-          <p class="date">May 16 2023</p>
+          <p class="date">September 19 2024</p>
         </div>
 
 
