--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,15 @@
           <a href="#" class="tag" data-tag="personal">Personal</a>
         </div>
 
+        <div class="blog-post" data-tags="math" data-tags="pdf">
+          <h3><a href="files/nvim.html">Group Theory Handout</a></h3>
+          <div class="blog-type">Math</div>
+          <div class="blog-type">PDF</div>
+          <p>
+              Basically started to learn group theory. More contents will be added later as I extend the note. 
+            <a href="uploads/groupt/group-theory.pdf">Continue Reading...</a>
+          <p class="date">September 25 2024</p>
+        </div>
         <div class="blog-post" data-tags="code">
           <h3><a href="files/nvim.html">NeoVim & Random Coding Setups With It</a></h3>
           <div class="blog-type">Code</div>
