--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="blog-post" data-tags="math" data-tags="pdf">
-          <h3><a href="files/nvim.html">Group Theory Handout</a></h3>
+          <h3><a href="uploads/groupt/group-theory.pdf">Group Theory Handout</a></h3>
           <div class="blog-type">Math</div>
           <div class="blog-type">PDF</div>
           <p>
