--- a/blog.html
+++ b/blog.html
@@ -61,6 +61,16 @@
           <p class="date">September 19 2024</p>
         </div>
 
+        <div class="blog-post" data-tags="personal">
+          <h3><a href="files/embroidery.html">So HSC is over :thinking:</a></h3>
+          <div class="blog-type">Personal</div>
+          <p>
+           I did some sewing stuff while I was in middle school, for my schoolwork. <a href="files/embroidery.html"> Continue
+              Reading...</a>
+          </p>
+
+          <p class="date">24 May 2024</p>
+        </div>
 
         <div class="blog-post" data-tags="personal">
           <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
