old embroidery blog added + the title fixed

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="blog-post" data-tags="personal">
-          <h3><a href="files/embroidery.html">So HSC is over :thinking:</a></h3>
+          <h3><a href="files/embroidery.html">Some takeaways from a piece</a></h3>
           <div class="blog-type">Personal</div>
           <p>
            I did some sewing stuff while I was in middle school, for my schoolwork. <a href="files/embroidery.html"> Continue
