nvim link fixed

--- a/files/nvim.html
+++ b/files/nvim.html
@@ -40,7 +40,7 @@
       <div class="blog-post-ex">
         <p>
           So,those who know me closely knows I stan for
-          <code>NeoVim</code>. I won't blabber around NeoVim too much like a weirdo (spoiler: I will). I am mainly writing about the functionality of some configs, which I may forget (another reason is to flex, but that's unrelated). These are available on          <a href="https://github.com/meowx-2">GitHub</a>. My configs are heavily
+          <code>NeoVim</code>. I won't blabber around NeoVim too much like a weirdo (spoiler: I will). I am mainly writing about the functionality of some configs, which I may forget (another reason is to flex, but that's unrelated). These are available on          <a href="https://github.com/MeowX-2/nvim">GitHub</a>. My configs are heavily
           influenced by
           <a href="https://www.youtube.com/playlist?list=PLsz00TDipIffreIaUNk64KxTIkQaGguqn">this</a>
           playlist (and some Google/Reddit/Github searching as needed).
