new year new art

--- a/art/jan2025.html
+++ b/art/jan2025.html
@@ -27,16 +27,21 @@
 
   <section id="blog" class="section-blog">
     <div class="container">
-           <h2>Some takeaways from a piece</h2>
-                <p><small><i> Feb 2025</i></small></p>
+           <h2>New year, new arts!</h2>
+                <p><small><i> 5 Feb 2025</i></small></p>
             <div class="blog-post-ex">
             
             <p> I am just trying to maintain the streak. Here are the arts that I have made in last month!</p> 
-            <h1> 1. Sewing + last minitue beed </h1>
+            <h1> 1. Sewing + last minitue beads</h1>
             <img src="./photo/jan2025-1" width="250px" height="250px">
             <p>  This is done in canvas fabric and fabric color. Also used pearl beads that I have colored and raw. On the side note, I was not planning to add the beads. At one time I thought it is enough. Just get over it! Turned out pretty well, I guess.</p>
             <h1> 2. Random Scribble </h1> 
+            <img src="./photo/jan2025-2.jpg" width="250px" height="250px">
+            <p>Bought a new sketchbook and drawing over them whenever I have time. I still have a A3 skectchbook. However, I never end up using it. So I instead bought a small one. </p>
             <h1> 3. Yet Another Doodle </h1>
+            <img src="./photo/jan2025-3" width="250px" height="250px">
+            <p> I am kinda sticking to floral arts, and it's just fun to be imaginative and carefree with it.</p> 
+
         </div>
     </div>
   </section>
