--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,15 @@
           <a href="#" class="tag" data-tag="personal">Personal</a>
         </div>
 
+        <div class="blog-post" data-tags="personal">
+          <h3><a href="art/jan2025.html">New year, new arts!</a></h3>
+          <div class="blog-type">Personal</div>
+          <p>
+            <p>I am just trying to maintain the streak. Here are the arts that I have made in last month!</p>
+            <a href="art/jan2025.html">Continue Reading...</a>
+          <p class="date">5 February 2025</p>
+        </div>
+
         <div class="blog-post" data-tags="math" data-tags="pdf">
           <h3><a href="uploads/groupt/group-theory.pdf">Group Theory Handout</a></h3>
           <div class="blog-type">Math</div>
