--- a/blog.html
+++ b/blog.html
@@ -41,24 +41,24 @@
           <a href="#" class="tag" data-tag="personal">Personal</a>
         </div>
 
-        <div class="blog-post" data-tags="personal">
-          <h3><a href="art/jan2025.html">New year, new arts!</a></h3>
-          <div class="blog-type">Personal</div>
-          <p>
-            <p>I am just trying to maintain the streak. Here are the arts that I have made in last month!</p>
-            <a href="art/jan2025.html">Continue Reading...</a>
-          <p class="date">5 February 2025</p>
-        </div>
-
-        <div class="blog-post" data-tags="math" data-tags="pdf">
-          <h3><a href="uploads/groupt/group-theory.pdf">Group Theory Handout</a></h3>
-          <div class="blog-type">Math</div>
-          <div class="blog-type">PDF</div>
-          <p>
-              Basically started to learn group theory. More contents will be added later as I extend the note. 
-            <a href="uploads/groupt/group-theory.pdf">Continue Reading...</a>
-          <p class="date">November 25 2024</p>
-        </div>
+        <!-- <div class="blog-post" data-tags="personal"> -->
+        <!--   <h3><a href="art/jan2025.html">New year, new arts!</a></h3> -->
+        <!--   <div class="blog-type">Personal</div> -->
+        <!--   <p> -->
+        <!--     <p>I am just trying to maintain the streak. Here are the arts that I have made in last month!</p> -->
+        <!--     <a href="art/jan2025.html">Continue Reading...</a> -->
+        <!--   <p class="date">5 February 2025</p> -->
+        <!-- </div> -->
+        <!---->
+        <!-- <div class="blog-post" data-tags="math" data-tags="pdf"> -->
+        <!--   <h3><a href="uploads/groupt/group-theory.pdf">Group Theory Handout</a></h3> -->
+        <!--   <div class="blog-type">Math</div> -->
+        <!--   <div class="blog-type">PDF</div> -->
+        <!--   <p> -->
+        <!--       Basically started to learn group theory. More contents will be added later as I extend the note.  -->
+        <!--     <a href="uploads/groupt/group-theory.pdf">Continue Reading...</a> -->
+        <!--   <p class="date">November 25 2024</p> -->
+        <!-- </div> -->
         <div class="blog-post" data-tags="code">
           <h3><a href="files/nvim.html">NeoVim & Random Coding Setups With It</a></h3>
           <div class="blog-type">Code</div>
@@ -70,16 +70,16 @@
           <p class="date">September 19 2024</p>
         </div>
 
-        <div class="blog-post" data-tags="personal">
-          <h3><a href="files/embroidery.html">Some takeaways from a piece</a></h3>
-          <div class="blog-type">Personal</div>
-          <p>
-           I did some sewing stuff while I was in middle school, for my schoolwork. <a href="files/embroidery.html"> Continue
-              Reading...</a>
-          </p>
-
-          <p class="date">24 May 2024</p>
-        </div>
+        <!-- <div class="blog-post" data-tags="personal"> -->
+        <!--   <h3><a href="files/embroidery.html">Some takeaways from a piece</a></h3> -->
+        <!--   <div class="blog-type">Personal</div> -->
+        <!--   <p> -->
+        <!--    I did some sewing stuff while I was in middle school, for my schoolwork. <a href="files/embroidery.html"> Continue -->
+        <!--       Reading...</a> -->
+        <!--   </p> -->
+        <!---->
+        <!--   <p class="date">24 May 2024</p> -->
+        <!-- </div> -->
 
         <div class="blog-post" data-tags="personal">
           <h3><a href="files/hsc.html">So HSC is over :thinking:</a></h3>
